Changes for 1.1alpha7:

 - added frontends/php/include/maps.inc.php (Alexei)
 - added frontends/php/include/services.inc.php (Alexei)
 - added frontends/php/include/actions.inc.php (Alexei)
 - hard-linked templates works when deleting a trigger (Alexei)
 - hard-linked templates works when adding a trigger (Alexei)
 - no warning about uninitialised function_str (Alexei)
 - fixed simple checks (Alexei)
 - fixed startup of housekeeper (Alexei)
 - added frontends/php/include/triggers.inc.php (Alexei)
 - added frontends/php/include/graphs.inc.php (Alexei)
 - added frontends/php/include/audit.inc.php (Alexei)
 - added frontends/php/include/users.inc.php (Alexei)
 - added frontends/php/include/screens.inc.php (Alexei)
 - added frontends/php/include/items.inc.php (Alexei)
 - Overview and Details mode for screen Queue (Alexei)

Changes for 1.1alpha6:

 - show both hostname and lable in ALT for map icons (Alexei)
 - added propagation of template item change to related hosts (Alexei)
 - modified data.sql to exclude zabbix_suckerd and zabbix_agentd (Alexei)
 - fixed SQL warning when updating actions (Alexei)
 - fixed change of plain text data in screens (Alexei)
 - fixed mouse navigation for multiple maps in one screen (Alexei)
 - configurable timestamp format in local_en.inc.php (Alexei)
 - support for no labels and no status in network maps (Alexei)
 - fix for startup of housekeeping process (Alexei)
 - fix of agent crash on 64 bit platforms in CKSUM() (Alexei)
 - added frontends/php/overview.php (Alexei)
 - removed link to unexistant trends.php (Alexei)
 - support for unlimited number of user parameters (Alexei)
 - support of passing of parameters to user-defined commands (Alexei)
 - improved zabbix.spec. Thanks to Dirk Datzert. (Alexei)
 - fixed detection of __va_copy() (Alexei)

Changes for 1.1alpha5:
 
 - fixed mouse navigation for multiple maps in one screen (Alexei)
 - fixed unmodified item parameter "Keep trends (in days)" (Alexei)